# matlabfind

./: .gitignore  CREDITS  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.filters  Makefile.in  README.md  aclocal.m4  build.xml  config.h.in  configure.ac  configure.in  diamond-bundle-matlab  git-export.sh
data/: Makefile.am
data/filter/: Makefile.am  rgb-filter.txt
data/glade/: Makefile.am  matlabfind.glade  matlabfind.gladep
doc/: matlabfind.html
filter-code/: .gitignore  fil_matlab_exec.c  matlab-compat.h
hyperfind-plugin/src/edu/cmu/cs/diamond/hyperfind/impl/: MATLABPlugin.java  MATLABSearch.java
quick-tar/: quick_tar.c
snapfind-plugin/: matlab.sf_conf  matlab_search.cc  matlab_search.h
src/: Makefile.am  define.c  define.h  diamond_interface.c  diamond_interface.h  fil_matlab_exec.c  investigate.c  investigate.cpp  investigate.h  main.c  matlab.sf_conf  matlab.sf_conf.in  matlab_search.cc  matlab_search.h  matlabfind.h  quick_tar.c  quick_tar.h  util.c  util.h
